[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/CellularAutomata.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Lato/Lato-Black.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 162
font_data = ExtResource( 3 )

[node name="CellularAutomata" type="Node2D"]
script = ExtResource( 1 )

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="StartPos" type="Position2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Resetter" type="Button" parent="."]
margin_left = 20.0
margin_top = -401.0
margin_right = 917.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 1 )
text = "RESET"
icon = ExtResource( 2 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
[connection signal="pressed" from="Resetter" to="." method="_on_Resetter_pressed"]
